--- a/style.css
+++ b/style.css
@@ -261,7 +261,88 @@ border-radius: 4px;
 #myBtn:hover {
 background-color: #555;
 }
+.modal-header-content {
+  text-align: center;
+  margin-bottom: 20px;
+}
 
+.modal-header-content img {
+  max-width: 80px; /* Adjust logo width */
+  display: block;
+  margin: 0 auto;
+}
+
+.modal-title {
+  margin-bottom: 0;
+  text-align: center; /* Center align modal title */
+}
+
+.modal-footer {
+  justify-content: center;
+}
+
+.signature {
+  margin-top: 20px;
+}
+
+.profile-picture-container {
+  max-width: 200px; /* Adjust width as needed */
+  max-height: 300px; /* Adjust height as needed */
+  margin: 0 auto; /* Center the container */
+  overflow: hidden; /* Ensure the image doesn't overflow */
+  border-radius: 10px; /* Rounded corners for the picture */
+}
+
+.profile-picture {
+  width: 80%; /* Ensure the picture fills the container */
+  height: 150px; /* Maintain aspect ratio */
+  display: block; /* Center the image within its container */
+  margin: 0 auto;
+}
+
+.card {
+  border-radius: 20px; /* Rounded corners for the card */
+  overflow: hidden;
+}
+
+.profile-card {
+  max-width: 550px; /* Increase the width for profile card */
+  margin: 0 auto; /* Centered content */
+  height:400px;
+}
+
+.card-body {
+  padding: 1.25rem; /* Padding inside the card body */
+}
+
+.card-title {
+  font-weight: bold;
+}
+
+/* styles for ID card modal */
+.id-card {
+  text-align: center;
+  padding: 1.25rem;
+  border: 2px solid #000; /* Border around the card */
+  max-width: 300px; /* Portrait orientation */
+  margin: 0 auto; /* Centered content */
+  margin-bottom: 20px; /* Space below the card */
+}
+
+.id-card-back {
+  /* Additional styles for back of ID card */
+  text-align: center; /* Center content */
+  padding: 1.25rem; /* Padding */
+  border: 2px solid #000; /* Border around the card */
+  max-width: 300px; /* Portrait orientation */
+  margin: 0 auto; /* Centered content */
+}
+
+.id-card-logo {
+  max-width: 80px;
+  margin: 0 auto;
+  display: block;
+}
 /* Close button styling */
 .close-btn {
   display: block;
