--- a/session.css
+++ b/session.css
@@ -82,6 +82,20 @@ h4 {
     color: #e4e8ec !important; /* Slightly darker on hover */
     background-color: rgba(255, 254, 254, 0.5) !important;
     }
+
+/* Remove caret space entirely */
+.nav-item .dropdown-toggle::after {
+    display: none; /* Hide the default caret */
+    }
+    #student-links a {
+        text-decoration: none;
+        color: #202122;
+      }
+      
+      #student-links a:hover {
+        text-decoration: none;
+        color:#a6a6a9
+      }
     /* Mobile view - Keep background light */
     @media (max-width: 992px) {
     .navbar-collapse {
