--- a/view.css
+++ b/view.css
@@ -35,7 +35,6 @@ align-items: center;
 padding: 0 10px;
 background-color: #f8f9fa; /* Light background */
 }
-
 /* Remove caret space entirely */
 .nav-item .dropdown-toggle::after {
     display: none; /* Hide the default caret */
@@ -134,9 +133,24 @@ display: none !important; /* Forcefully hide the element */
 
 /* Show the cancel button in mobile view */
 @media (max-width: 992px) {
-.cancel-btn {
-display: block; /* Show when navbar is toggled */
-}
+    .second-navbar {
+        top: 60px;
+        padding: 15px 10px;
+        height: 40px;
+        }
+        
+        .navbar-toggler {
+          left: 50%;
+          transform: translateX(250%);
+          }
+          
+          .cancel-btn {
+          display: block; /* Show when navbar is toggled */
+          position: absolute;
+          top: 8px;
+          right: 8px;
+          font-size: 1.25rem;
+          }
 }
 /* Hide the menu icon by default when navbar is shown */
 .navbar-toggler-icon.hidden {
