--- a/extra.css
+++ b/extra.css
@@ -224,22 +224,23 @@ body {
     }
 
     .second-navbar {
-        top: 50px;
+        top: 60px;
         padding: 15px 10px;
         height: 40px;
-    }
+        }
+        
+        .navbar-toggler {
+          left: 50%;
+          transform: translateX(250%);
+          }
+          
+          .cancel-btn {
+          position: absolute;
+          top: 8px;
+          right: 8px;
+          font-size: 1.25rem;
+          }
 
-    .navbar-toggler {
-        left: 50%;
-        transform: translateX(-50%);
-    }
-
-    .cancel-btn {
-        position: absolute;
-        top: 8px;
-        right: 8px;
-        font-size: 1.25rem;
-    }
 
     /* Footer adjustments */
     .footer {
@@ -306,3 +307,16 @@ button {
 button:hover {
     background-color: #a6a6a9;
 }
+.close-btn {
+    display: block;
+    width: 100px;
+    margin: 20px auto;
+    text-align: center;
+    background-color: #dc3545;
+    color: white;
+    border: none;
+    padding: 10px;
+    border-radius: 5px;
+    font-size: 16px;
+    cursor: pointer;
+  }
